# skakspil_core

./: .gitignore  cmakelists.txt  model.py  test_bindings.py  train.py
src/: encoding.cpp  python_bindings.cpp
src/include/: encoding.h
tests/: CMakeLists.txt
